# deckfile

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/deckfile/: __init__.py  __main__.py  annotations.py  branding.py  chart.py  cli.py  formatters.py  generate.py  gsheets.py  init.py  interpolation.py  output.py  query.py  series.py  theme.py
src/deckfile/renderers/: area.py  bar.py  base.py  combo.py  line.py  projection.py
src/deckfile/scaffold/: .env.example  deckfile.yaml
src/deckfile/scaffold/data/: sample.csv
